Fixes look on iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ h1 {
 }
 @media screen and (max-width: 690px){
     h1 {
-        font-size: 12vh;
-        line-height: 9vh;
+        font-size: 10vh;
+        line-height: 8vh;
     }
 }
